2023-07-01 0.22h
  * fixed wrong database entry for special files (type)
  * fixed database patterns: * and empty
  * fixed wrong locking on restore
  * bar-index: fixed wrong counted lost entries without
    fragments
  * log crashes into log file
  * avoid overflow of internal error history which could
    result in reporting the wrong error information
  * fixed race condition in database lock info in debug
    version
  * fixed possible infinite loop in continuous backup
  * fixed long SQLite database lock when deleting storage
  * fixed find storges in database: use database index
  * fixed remove indices by error state
  * fixed move storages to new location with PostgreSQL:
    avoid concurrent/long running database operations
  * fixed crash in slave mode (#issue 3, thanks to ChrisTG742)
  * fixed WebDAV login: support port number, fixed passed path
  * added option --webdav-port
  * fixed WebDAV chunked download
  * fixed WebDAVS
  * fixed possible infinte loop when delete expired entities
  * fixed store restore tree/table column width
  * fixed store restore pane sizes
  * fixed schedule date/time with day light saving: avoid
    invalid date/time
  * fixed ssh login: try key+password
  * fixed add storages to index: support ftp/sftp/webDAV.
    fixed name in index
  * fixed SFTP file/directory type+permissions
  * fixed assign entity to another entity
  * BARControl: added option --info
  * BARControl: fixed list directory entries on insufficient
    permission
  * BARControl: fixed option --index-database-add: match
    pattern
  * BARControl: fixed sort file tree items by type/size/
    date+time
  * BARControl: fixed display of included/execluded entries
    via pattern
  * BARControl: fixed error handling when slave is in
    disconnected state
  * BARControl: added tooltip for total entries
  * BARControl: fixed clone job and update view
  * BARControl: fixed file requester if job is unknown
  * BARControl: added source for storage add to index