@@ -1,3 +1,7 @@
+2023-09-01 23
+  * fixed bar-index --pipe
+  * fixed reserved keyword in MariaDB: offset
+
 2023-07-01 0.22h
   * fixed wrong database entry for special files (type)
   * fixed database patterns: * and empty
